lib/libui/status/snapshots/libui__status__tests__status_snapshot_cached_limits_hide_credits_without_flag.snap
---
source: lib/libui/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────╮
│  >_ FreeChaOS (v47.1.0)                                           │
│                                                                   │
│                                                                   │
│  Model:          gpt-5.1-codex (reasoning none, summaries auto)   │
│  Directory: [[workspace]]                                         │
│  Permissions:    Custom (read-only, interactive)                  │
│                                                                   │
│  Token usage:    1.05K total  (700 input + 350 output)            │
│  5h limit:       [████████░░░░░░░░░░░░] 40% left (resets 11:32)   │
│  Weekly limit:   [█████████████░░░░░░░] 65% left (resets 11:52)   │
│  Warning:        limits may be stale - start new turn to refresh. │
╰───────────────────────────────────────────────────────────────────╯
