lib/libui/status/snapshots/libui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: lib/libui/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────╮
│  >_ FreeChaOS (v47.1.0)                                         │
│                                                                 │
│                                                                 │
│  Model:          gpt-5.1-codex (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                       │
│  Permissions:    Custom (read-only, interactive)                │
│                                                                 │
│  Token usage:    2K total  (1.4K input + 600 output)            │
│  5h limit:       [███████████░░░░░░░░░] 55% left (resets 09:25) │
│  Weekly limit:   [██████████████░░░░░░] 70% left (resets 09:55) │
│  Credits:        38 credits                                     │
╰─────────────────────────────────────────────────────────────────╯
