lib/libui/status/snapshots/libui__status__tests__status_snapshot_includes_monthly_limit.snap
---
source: lib/libui/status/tests.rs
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────────╮
│  >_ FreeChaOS (v0.0.0)                                                    │
│                                                                           │
│                                                                           │
│  Model:           gpt-5.1-codex-max (reasoning none, summaries auto)      │
│  Directory: [[workspace]]                                                 │
│  Permissions:     Custom (read-only, interactive)                         │
│                                                                           │
│  Token usage:     1.2K total  (800 input + 400 output)                    │
│  Monthly limit:   [██████████████████░░] 88% left (resets 07:08 on 7 May) │
╰───────────────────────────────────────────────────────────────────────────╯
