lib/libui/status/snapshots/libui__status__tests__status_snapshot_shows_empty_limits_message.snap
---
source: lib/libui/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ FreeChaOS (v0.0.0)                                             │
│                                                                    │
│                                                                    │
│  Model:         gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                          │
│  Permissions:   Custom (read-only, interactive)                    │
│                                                                    │
│  Token usage:   750 total  (500 input + 250 output)                │
│  Limits:        data not available yet                             │
╰────────────────────────────────────────────────────────────────────╯
