lib/libui/status/snapshots/libui__status__tests__status_snapshot_shows_stale_limits_message.snap
---
source: lib/libui/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────╮
│  >_ FreeChaOS (v47.2.0)                                             │
│                                                                     │
│                                                                     │
│  Model:          gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Directory: [[workspace]]                                           │
│  Permissions:    Custom (read-only, interactive)                    │
│                                                                     │
│  Token usage:    1.9K total  (1K input + 900 output)                │
│  5h limit:       [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)     │
│  Weekly limit:   [████████████░░░░░░░░] 60% left (resets 03:34)     │
│  Warning:        limits may be stale - start new turn to refresh.   │
╰─────────────────────────────────────────────────────────────────────╯
