lib/libui/status/snapshots/libui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: lib/libui/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ FreeChaOS (v47.2.0)                                            │
│                                                                    │
│                                                                    │
│  Model:         gpt-5.1-codex-max (reasoning high, summaries detai │
│  Directory: [[workspace]]                                          │
│  Permissions:   Custom (read-only, interactive)                    │
│                                                                    │
│  Token usage:   1.9K total  (1K input + 900 output)                │
│  5h limit:      [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)     │
╰────────────────────────────────────────────────────────────────────╯
